--- a/src/styles.css
+++ b/src/styles.css
@@ -21,6 +21,7 @@
     display: flex;
     flex-wrap: wrap;
     gap: 10px 0;
+    justify-content: flex-end;
 }
 
 .btn-default {
@@ -40,19 +41,74 @@
     float: right;
 }
 
-#groups {
+#btn-groups {
     padding: 6px !important;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
+#btn-clear-group {
+    padding: 2px;
+    font-size: 10px;
+    width: 50px;
+    border-radius: 0;
+}
+
 #btnExportToExcel {
     width: 100%;
 }
 
-.checkbox-sheet {
-    float: left;
+.custom-bar {
+    display: flex;
+    gap: 0 30px;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+.div-textfield {
+    max-width: 90px;
+    flex: 0 0 90px;
+}
+
+.div-textfield * {
+    display: inline;
+}
+
+.div-textfield>input {
+    max-width: 50px;
+    padding: 2px 5px;
+    max-height: 22px;
+}
+
+label[for="flexCheckChecked"] {
+    margin: 0 0 0 25px;
+    position: relative;
+    user-select: none;
+}
+
+label[for="flexCheckChecked"]:before {
+    content: '';
+    height: 20px;
+    width: 20px;
+    border: 1px solid #000;
+    position: absolute;
+    left: -25px;
+    top: 0;
+}
+
+label[for="flexCheckChecked"]:after {
+    content: '✓';
+    height: 20px;
+    width: 20px;
+    position: absolute;
+    left: -25px;
+    top: 0;
+    display: none;
+}
+
+input#flexCheckChecked:checked+label[for="flexCheckChecked"]:after {
+    display: block;
 }
 
 a[rel="noopener"],
