--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,6 @@
 :root {
-    --width-center: 1000px
+    --width-center: 1000px;
+    --background-yellow: rgb(255, 242, 204);
 }
 
 .w800 {
@@ -14,6 +15,10 @@
 
 #theGrid {
     height: 700px;
+}
+
+.wj-background-yellow{
+    background: var(--background-yellow) !important;
 }
 
 .banner {
